  process was retrieved by getByProcessId() instead of a NullPointer
  (friebe)
- Fixed bug #43 - peer.mail.store.Pop3Store connection error
  (friebe)
- Fixed bug #45 - Setting Properties on a LogAppender fails
  (friebe)
- Fixed webservices.json.JsonDecoder when decoding overly long strings
  (friebe, Mihai Ghigea)

Features
~~~~~~~~
- Added fluent interface peer.http.FormRequestData::withPart() 
  (friebe)
- Added lang.RuntimeOptions::withClassPath() method
  (friebe)
- Ports: Added support to Google custom search for Spelling suggestions 
  ("Did you mean"), Synonyms ("You could also try") and Key matches 
  (~ Adwords)
  (friebe)
- Ports: Allowed passing arbitrary parameters in Google custom search
  implementatiom, com.google.search.custom.GoogleSearchClient::searchFor()
  (friebe)


Version 5.7.12, released 2010-11-17
-----------------------------------
SVN version: 14984

Heads up!
~~~~~~~~~
- Set client charset in rdbms.sybase.SybaseConnection to iso_1
  (friebe, kiesel)

Bugfixes
~~~~~~~~
- Fixed lang.types.String::getBytes() to throw an exception instead of
  cutting off the returned bytes at the position of an encoding error
  (friebe)
- Fixed absolute path calculation in io.Folder
  (friebe)
- Fixed possible fatal error in lang.ChainedException common stack trace
  elements' calculation
  (friebe)
- Changed img.fonts.TrueTypeFont's constructor to throw an exception if
  the font cannot be found
  (friebe)
- Fixed Runtime::memoryUsage() and Runtime::peakMemoryUsage()
  (friebe)

Features
~~~~~~~~
- Made io.File::copy() and io.File::move() accept io.File and io.Folder 
  instances in addition to strings.
  (friebe)
- Changed text.regex.Pattern not to throw exceptions on malformed 
  patterns like Pattern::compile(), and instead defer pattern validation 
  until actually matching the pattern - performance improvement
  (friebe)
- Added text.regex.Pattern::replaceWith() method
  (friebe)
- Added values() method to util.collections.HashTable
  (friebe)