@@ -40,8 +40,9 @@
      * @param   lang.Object instance
      * @param   lang.XPClass class
      * @param   xml.Node node
+     * @param   [:var] inject
      */
-    protected static function recurse($instance, $class, $node) {
+    protected static function recurse($instance, $class, $node, $inject) {
     
       // Namespace handling
       if ($class->hasAnnotation('xmlns')) {
@@ -55,15 +56,26 @@
         
         $element= $method->getAnnotation('xmlfactory', 'element');
         
+        // Pass injection parameters at end of list
+        $arguments= array();
+        if ($method->hasAnnotation('xmlfactory', 'inject')) {
+          foreach ($method->getAnnotation('xmlfactory', 'inject') as $name) {
+            if (!isset($inject[$name])) throw new IllegalArgumentException(
+              'Injection parameter "'.$name.'" not found for '.$method->toString()
+            );
+            $arguments[]= $inject[$name];
+          }
+        }
+        
         // Attributes
         if ('@' == $element{0}) {
-          $node->setAttribute(substr($element, 1), $method->invoke($instance));
+          $node->setAttribute(substr($element, 1), $method->invoke($instance, $arguments));
           continue;
         }
         
         // Node content
         if ('.' == $element) {
-          $node->setContent($method->invoke($instance));
+          $node->setContent($method->invoke($instance, $arguments));
           continue;
         }
         
@@ -80,7 +92,7 @@
         //
         // - For objects, add a new node and invoke the recurse() method
         //   on it.
-        $result= $method->invoke($instance);
+        $result= $method->invoke($instance, $arguments);
         if (is_scalar($result) || NULL === $result) {
           $node->addChild(new Node($element, $result));
         } else if (is_array($result)) {
@@ -91,18 +103,18 @@
         } else if (is('lang.Collection', $result)) {
           $elementClass= $result->getElementClass();
           foreach ($result->values() as $value) {
-            self::recurse($value, $elementClass, $node->addChild(new Node($element)));
+            self::recurse($value, $elementClass, $node->addChild(new Node($element)), $inject);
           }
         } else if ($result instanceof Traversable) {
           foreach ($result as $value) {
             if ($value instanceof Generic) {
-              self::recurse($value, $value->getClass(), $node->addChild(new Node($element)));
+              self::recurse($value, $value->getClass(), $node->addChild(new Node($element)), $inject);
             } else {
               $node->addChild(new Node($element, $value));
             }
           }
         } else if ($result instanceof Generic) {
-          self::recurse($result, $result->getClass(), $node->addChild(new Node($element)));
+          self::recurse($result, $result->getClass(), $node->addChild(new Node($element)), $inject);
         }
       }
     }
@@ -132,7 +144,7 @@
         $tree->root->setName(strtolower($class->getSimpleName()));
       }
       
-      self::recurse($instance, $class, $tree->root);
+      self::recurse($instance, $class, $tree->root, array());
       return $tree->getSource(INDENT_DEFAULT);
     }
  
@@ -141,9 +153,10 @@
      *
      * @param   xml.Node target
      * @param   lang.Object instance
+     * @param   [:var] inject
      * @return  xml.Node the given target
      */
-    public function marshalTo(Node $target, Generic $instance) {
+    public function marshalTo(Node $target, Generic $instance, $inject= array()) {
       $class= $instance->getClass();
 
       // Add XML namespace from class' "xmlns" annotation if present
@@ -151,7 +164,7 @@
         $target->setName(key($class->getAnnotation('xmlns')).':'.$target->getName());
       }
       
-      self::recurse($instance, $class, $target);
+      self::recurse($instance, $class, $target, $inject);
       return $target;
     }
   }
