@@ -66,15 +66,14 @@
      * Recursively unmarshal
      *
      * @param   xml.XPath xpath
-     * @param   php.DomElement context
-     * @param   string classname
+     * @param   php.DomElement element
+     * @param   lang.XPClass classname
+     * @param   [:var] inject
      * @return  lang.Object
      * @throws  lang.ClassNotFoundException
      * @throws  xml.XPathException
      */
-    protected static function recurse($xpath, $context, $classname) {
-      $class= XPClass::forName($classname);
-      $instance= $class->newInstance();
+    protected static function recurse($xpath, $element, $class, $inject) {
 
       // Namespace handling
       if ($class->hasAnnotation('xmlns')) {
@@ -82,12 +81,13 @@
           $xpath->context->registerNamespace($prefix, $url);
         }
       }
-
+      
+      $instance= $class->newInstance();
       foreach ($class->getMethods() as $method) {
         if (!$method->hasAnnotation('xmlmapping', 'element')) continue;
 
         // Perform XPath query
-        $result= $xpath->query($method->getAnnotation('xmlmapping', 'element'), $context);
+        $result= $xpath->query($method->getAnnotation('xmlmapping', 'element'), $element);
 
         // Iterate over results, invoking the method for each node.
         foreach ($result as $node) {
@@ -99,7 +99,8 @@
             $arguments= array(self::recurse(
               $xpath, 
               $node, 
-              $method->getAnnotation('xmlmapping', 'class')
+              XPClass::forName($method->getAnnotation('xmlmapping', 'class')),
+              $inject
             ));
           } else if ($method->hasAnnotation('xmlmapping', 'factory')) {
 
@@ -120,10 +121,11 @@
             $arguments= array(self::recurse(
               $xpath, 
               $node, 
-              call_user_func_array(
+              XPClass::forName(call_user_func_array(
                 array($instance, $method->getAnnotation('xmlmapping', 'factory')), 
                 $factoryArgs
-              )
+              )),
+              $inject
             ));
           } else if ($method->hasAnnotation('xmlmapping', 'pass')) {
           
@@ -145,6 +147,16 @@
 
             // * Otherwise, pass the node's content to the method
             $arguments= array(utf8_decode($node->textContent));
+          }
+          
+          // Pass injection parameters at end of list
+          if ($method->hasAnnotation('xmlmapping', 'inject')) {
+            foreach ($method->getAnnotation('xmlmapping', 'inject') as $name) {
+              if (!isset($inject[$name])) throw new IllegalArgumentException(
+                'Injection parameter "'.$name.'" not found for '.$method->toString()
+              );
+              $arguments[]= $inject[$name];
+            }
           }
           
           $method->invoke($instance, $arguments);
@@ -175,7 +187,7 @@
         $e= libxml_get_last_error();
         throw new XMLFormatException(trim($e->message), $e->code, $source, $e->line, $e->column);
       }
-      return self::recurse(new XPath($doc), $doc->documentElement, $classname);
+      return self::recurse(new XPath($doc), $doc->documentElement, XPClass::forName($classname), array());
     }
 
     /**
@@ -183,18 +195,39 @@
      *
      * @param   xml.parser.InputSource source
      * @param   string classname
+     * @param   [:var] inject
      * @return  lang.Object
      * @throws  lang.ClassNotFoundException
      * @throws  xml.XMLFormatException
+     * @throws  lang.reflect.TargetInvocationException
+     * @throws  lang.IllegalArgumentException
      */
-    public function unmarshalFrom(InputSource $input, $classname) {
+    public function unmarshalFrom(InputSource $input, $classname, $inject= array()) {
       libxml_clear_errors();
       $doc= new DOMDocument();
       if (!$doc->load(Streams::readableUri($input->getStream()))) {
         $e= libxml_get_last_error();
         throw new XMLFormatException(trim($e->message), $e->code, $input->getSource(), $e->line, $e->column);
       }
-      return self::recurse(new XPath($doc), $doc->documentElement, $classname);
+
+      $xpath= new XPath($doc);
+
+      // Class factory based on tag name, reference to a static method which is called with 
+      // the class name and returns an XPClass instance.
+      $class= XPClass::forName($classname);
+      if ($class->hasAnnotation('xmlmapping', 'factory')) {
+        if ($class->hasAnnotation('xmlmapping', 'pass')) {
+          $factoryArgs= array();
+          foreach ($class->getAnnotation('xmlmapping', 'pass') as $pass) {
+            $factoryArgs[]= self::contentOf($xpath->query($pass, $doc->documentElement));
+          }
+        } else {
+          $factoryArgs= array($doc->documentElement->nodeName);
+        }
+        $class= $class->getMethod($class->getAnnotation('xmlmapping', 'factory'))->invoke(NULL, $factoryArgs);
+      }
+
+      return self::recurse($xpath, $doc->documentElement, $class, $inject);
     }
   }
 ?>
