@@ -31,6 +31,11 @@ Bugfixes
 
 Features
 ~~~~~~~~
+- Added injection support to xml.meta.Marshaller and xml.meta.Unmarshaller
+  (friebe)
+- Added ability to select unmarshalling target class based on root
+  tag to xml.meta.Unmarshaller
+  (friebe)
 - Added fluent interface peer.http.FormRequestData::withPart() 
   (friebe)
 - Added lang.RuntimeOptions::withClassPath() method
